--- a/charts/todo/values.yaml
+++ b/charts/todo/values.yaml
@@ -2,7 +2,8 @@ app:
   namespace: default
   replicas: 1
   name: todo
-  image: 279425659819.dkr.ecr.eu-central-1.amazonaws.com/oron_todo
+  # image: 279425659819.dkr.ecr.eu-central-1.amazonaws.com/oron_todo
+  image: 006262944085.dkr.ecr.eu-central-1.amazonaws.com/oron_todo
   tag: 1.0.20
   port: 5000
   resources:
